--- a/sass/_your-style.scss
+++ b/sass/_your-style.scss
@@ -11,6 +11,8 @@
 body{
     background: url(../img/background.jpg) repeat;
 }
+
+pre{ white-space: pre-wrap; }
 // $TYPOGRAPHY
 // $LAYOUT
 .content{
