--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -47,14 +47,13 @@ $font-size-h3:      2.2;
 $font-size-h4:      2.0;
 $font-size-h5:      1.8;
 $font-size-h6:      1.6;
-1font-size-small:   0.9;
-
+$font-size-small:   0.9;
 
 // Links
-$linkcolor          : rgb(1,53,104);
-$linkcolorhover     : darken($linkcolor, 10);
-$linkcolorvisited   : darken($linkcolorhover, 10);
-$linkcolorfocus     : darken($linkcolorvisited, 10);
+$link-color          : rgb(1,53,104);
+$link-color-hover    : darken($linkcolor, 10);
+$link-color-visited  : darken($linkcolorhover, 10);
+$link-color-focus    : darken($linkcolorvisited, 10);
 
 // Defaults
 $border-radius: 5;
