--- a/sass/layout/_links.scss
+++ b/sass/layout/_links.scss
@@ -1,7 +1,7 @@
 a{
     text-decoration: none;
     color: $link-color;
-    c
+    font-weight: $link-weight;
     &:hover,
     &:active,
     &:focus{
