--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -18,10 +18,9 @@ $primary5:  rgb(239, 231, 190);
 $success-color: green;
 $alert-color:   red;
 
-
 // Theme Standards
 $text-color:    $black;
-$bg-color:      $white;
+$bg-color:      $grey;
 $head-color:    $primary2;
 $link-color:    $primary3;
 $border-color:  $lightergrey;
