grid variables, max-width, defaultbackground

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -18,9 +18,12 @@ $primary5:  rgb(239, 231, 190);
 $success-color: green;
 $alert-color:   red;
 
+// Grid
+$grid-max-size: 90em;
+
 // Theme Standards
 $text-color:    $black;
-$bg-color:      $grey;
+$bg-color:      $white;
 $head-color:    $primary2;
 $link-color:    $primary3;
 $border-color:  $lightergrey;
