--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -20,6 +20,10 @@ $alert-color:   red;
 
 // Grid
 $grid-max-size: 90em;
+$grid-orientation: 0 auto; // centered: 0 auto;
+
+// Flags
+$is-rem: false;
 
 // Theme Standards
 $text-color:    $black;
