added button font flag

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -46,6 +46,7 @@ $font-size-body:    1.4;
 $line-height:       1.6;
 $font-main:         Helvetica, Arial, sans-serif;
 $font-heading:      inherit;
+$font-button:       inherit;
 $font-mono:         monospace, sans-serif;
 $font-size-h1:      2.6;
 $font-size-h2:      2.4;
