button group block level

--- a/sass/layout/_buttons.scss
+++ b/sass/layout/_buttons.scss
@@ -40,6 +40,7 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    display: inline-block;
     > li{
         float: left;
         margin: 0 0 0 -1px;
