--- a/sass/layout/_buttons.scss
+++ b/sass/layout/_buttons.scss
@@ -1,4 +1,4 @@
-.btn{
+%btn{
     @include font-size(1.4);
     // box-shadow: inset 0 1px 0 rgba(255, 255, 255, .4), 0 5px 5px rgba(0, 0, 0, .2);
     background: $btn-primary;
@@ -36,7 +36,7 @@
     &.pill     { border-radius: 1000px; }
 }
 
-.btn-group{
+%btn-group{
     list-style: none;
     padding: 0;
     margin: 0;
