--- a/sass/base/_elements.scss
+++ b/sass/base/_elements.scss
@@ -111,8 +111,8 @@ button {width: auto; overflow: visible;}
 .ie7 img {-ms-interpolation-mode: bicubic;}
 
 // Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
-::-moz-selection{background: #fcd700; color: #fff; text-shadow: none;}
-::selection {background: #fcd700; color: #fff; text-shadow: none;}
+::-moz-selection{background: $mark-bg; color: $mark-color; text-shadow: none;}
+::selection {background: $mark-bg; color: $mark-color; text-shadow: none;}
 
 //  j.mp/webkit-tap-highlight-color */
 a:link {-webkit-tap-highlight-color: #fcd700;}
