--- a/sass/state/_media-queries.scss
+++ b/sass/state/_media-queries.scss
@@ -2,12 +2,29 @@
 // List from: http://css-tricks.com/snippets/css/media-queries-for-standard-devices/
 // Uncomment as needed
 
-// Smartphones (portrait and landscape)
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
-    // Custom Styles here:
+
+// $STATES
+@media screen and (min-width: 61em) {
+    body{ font-size: 140%; }
 }
+@media screen and (max-width: 60em) {
+    body{ font-size: 130%; }
+}
+@media screen and (max-width: 48em) {
+    body{ font-size: 115%; }
+}
+@media screen and (max-width: 32em) {
+    body{ font-size: 100%; }
+}
+
+
+
+// Smartphones (portrait and landscape)
+// @media only screen
+// and (min-device-width : 320px)
+// and (max-device-width : 480px) {
+//     // Custom Styles here:
+// }
 
 // // Smartphones (landscape)
 // @media only screen
@@ -57,8 +74,8 @@ and (max-device-width : 480px) {
 // }
 
 // iPhone 4 / Retina Images
-@media
-only screen and (-webkit-min-device-pixel-ratio : 1.5),
-only screen and (min-device-pixel-ratio : 1.5) {
-    // Custom Styles here:
-}
+// @media
+// only screen and (-webkit-min-device-pixel-ratio : 1.5),
+// only screen and (min-device-pixel-ratio : 1.5) {
+//     // Custom Styles here:
+// }
