--- a/sass/_shame.scss
+++ b/sass/_shame.scss
@@ -1,18 +1,19 @@
-// Idea: http://csswizardry.com/2013/04/shame-css/
+/* shame.scss */
+/* Article: http://csswizardry.com/2013/04/shame-css/ */
 
-// Try:  $ git blame shame.css
+// Try:  $ git blame _shame.scss
 
 // Rules:
 //     Obviously you need some kind of rules and criteria:
 
-//     1. If it’s a hack, it goes in shame.css.
+//     1. If it’s a hack, it goes in _shame.scss.
 //     2. Document all hacks fully:
 //     3. What part of the codebase does it relate to?
 //     4. Why was this needed?
 //     5. How does this fix it?
 //     6. How might you fix it properly, given more time?
 //     7. Do not blame the developer; if they explained why they had to do it then their reasons are probably (hopefully) valid.
-//     8. Try and clean shame.css up when you have some down time.
+//     8. Try and clean _shame.scss up when you have some down time.
 //         Even better, get tech-debt story in which you can dedicate actual sprint time to it.
 
 // Example:
