--- a/sass/layout/_buttons.scss
+++ b/sass/layout/_buttons.scss
@@ -1,3 +1,9 @@
+// Button Module - Placeholder
+// extend your button class with @extend %btn or %btn-group
+
+// Example: .button{ @extend %btn; }
+//          .button-group{ @extend %btn-group; }
+
 %btn{
     @include font-size(1.0);
     // box-shadow: inset 0 1px 0 rgba(255, 255, 255, .4), 0 5px 5px rgba(0, 0, 0, .2);
