--- a/sass/module/_module-object.scss
+++ b/sass/module/_module-object.scss
@@ -1,9 +1,8 @@
-	// Copyright (c) 2009, Nicole Sullivan. All rights reserved.
-	// Code licensed under the BSD License:
-	// version: 0.2
+// Module - Placeholder
+// Example: .my-module{ @extend %mod; }
+// This is a stripped version of Nicole Sullivans OOCSS Module Pattern. See http://oocss.org
 
-/* mod */
-.mod {
+%mod {
   	margin: 10px;
   	.inner { }
   	.bd, .ft, .hd {
@@ -11,45 +10,6 @@
 		*overflow: visible;
 		zoom: 1;
   	}
-  	b {
-		&.top, &.bottom {
-			display: block;
-			background-repeat: no-repeat;
-			font-size: 1%;
-			position: relative;
-			z-index: 10;
-			b {
-			  	display: block;
-			  	background-repeat: no-repeat;
-			  	font-size: 1%;
-			  	position: relative;
-			  	z-index: 10;
-			}
-		}
-	}
-	.tl, .tr, .bl, .br {
-	  height: 10px;
-	  width: 10px;
-	  float: left;
-	}
-	.tl { background-position: left top; }
-	.tr { background-position: right top; }
-	.bl { background-position: left bottom;}
-	.br { background-position: right bottom; float: right; }
-
-	.tr { float: right; overflow: hidden; margin-bottom: -32000px; }
-	.tl { overflow: hidden; margin-bottom: -32000px; }
-
-	// margin bottom needs to be < -9px
-	.bl, .br { margin-top: -10px; }
-	.top {background-position: center top; }
-
-
-	.bottom {
-	  	background-position: center bottom;
-		// this zoom required for IE5.5 only
-	  	_zoom: 1;
-	}
 }
 
 
