--- a/sass/module/_nav-object.scss
+++ b/sass/module/_nav-object.scss
@@ -1,5 +1,9 @@
 /* The Nav Object */
-// http://csswizardry.com/2011/09/the-nav-abstraction
+// Source: http://csswizardry.com/2011/09/the-nav-abstraction
+
+// Basic Nav: Horizontal Navigation
+// Main Nav: Extends basic nav with a full width navigation
+// Vertical: Extends basic nav, adds vertical alignment
 
 // Basic Nav
 %nav{
@@ -17,20 +21,11 @@
 
 // Colored Nav
 %main-nav{
+    @extend %nav;
     width:100%;
-    background:#eee;
-    a{
-        padding:5px 10px;
-    }
+    background: $nav-bg;
+    a{ padding:5px 10px; }
 }
-
-// Breadcrumb
-%breadcrumb {
-    li:before{ content:"» " }
-    li:first-child:before{ content:normal; }
-}
-
-%centered { text-align: center; }
 
 %vertical{
     @extend %nav;
@@ -43,3 +38,8 @@
     }
 }
 
+// Breadcrumb
+%breadcrumb {
+    li:before{ content:"» " }
+    li:first-child:before{ content:normal; }
+}
