--- a/sass/base/_placeholder.scss
+++ b/sass/base/_placeholder.scss
@@ -11,5 +11,13 @@
     text-align: start;
 }
 
-// Centered Element
-%centered { text-align: center; }
+
+// Highlighted Elements
+%is-highlighted{
+    background: $highlight-bg;
+}
+
+// Positioning
+%is-centered { text-align: center; }
+%is-left{ float: left; }
+%is-right{ float: right; }
